logs/tracking/build.make.254.log.stderr
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp: In function ‘Eigen::Vector3f triangulatePoint(Eigen::Matrix4f, Eigen::Matrix4f, Eigen::Vector3f, Eigen::Vector3f)’:
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:18:21: warning: variable ‘out’ set but not used [-Wunused-but-set-variable]
  Eigen::RowVector4f out = V.row(3)/V(3,3);
                     ^
In file included from /usr/include/eigen3/Eigen/Core:254:0,
                 from /usr/include/eigen3/Eigen/Dense:1,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/ImageProcessing.h:6,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/DepthFilter.h:6,
                 from /home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:1:
/usr/include/eigen3/Eigen/src/Core/Assign.h: In instantiation of ‘Derived& Eigen::DenseBase<Derived>::lazyAssign(const Eigen::DenseBase<OtherDerived>&) [with OtherDerived = Eigen::Transpose<Eigen::Block<Eigen::Matrix<float, 4, 4>, 4, -1, true> >; Derived = Eigen::Matrix<float, 3, 1>]’:
/usr/include/eigen3/Eigen/src/Core/PlainObjectBase.h:411:46:   required from ‘Derived& Eigen::PlainObjectBase<Derived>::lazyAssign(const Eigen::DenseBase<OtherDerived>&) [with OtherDerived = Eigen::Transpose<Eigen::Block<Eigen::Matrix<float, 4, 4>, 4, -1, true> >; Derived = Eigen::Matrix<float, 3, 1>]’
/usr/include/eigen3/Eigen/src/Core/Assign.h:520:123:   required from ‘static Derived& Eigen::internal::assign_selector<Derived, OtherDerived, false, false>::run(Derived&, const OtherDerived&) [with Derived = Eigen::Matrix<float, 3, 1>; OtherDerived = Eigen::Transpose<Eigen::Block<Eigen::Matrix<float, 4, 4>, 4, -1, true> >]’
/usr/include/eigen3/Eigen/src/Core/PlainObjectBase.h:618:105:   required from ‘Derived& Eigen::PlainObjectBase<Derived>::_set_noalias(const Eigen::DenseBase<OtherDerived>&) [with OtherDerived = Eigen::Transpose<Eigen::Block<Eigen::Matrix<float, 4, 4>, 4, -1, true> >; Derived = Eigen::Matrix<float, 3, 1>]’
/usr/include/eigen3/Eigen/src/Core/Matrix.h:281:31:   required from ‘Eigen::Matrix<_Scalar, _Rows, _Cols, _Options, _MaxRows, _MaxCols>::Matrix(const Eigen::MatrixBase<OtherDerived>&) [with OtherDerived = Eigen::Transpose<Eigen::Block<Eigen::Matrix<float, 4, 4>, 4, -1, true> >; _Scalar = float; int _Rows = 3; int _Cols = 1; int _Options = 0; int _MaxRows = 3; int _MaxCols = 1]’
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:20:33:   required from here
/usr/include/eigen3/Eigen/src/Core/util/StaticAssert.h:32:40: error: static assertion failed: YOU_MIXED_MATRICES_OF_DIFFERENT_SIZES
     #define EIGEN_STATIC_ASSERT(X,MSG) static_assert(X,#MSG);
                                        ^
/usr/include/eigen3/Eigen/src/Core/util/StaticAssert.h:182:3: note: in expansion of macro ‘EIGEN_STATIC_ASSERT’
   EIGEN_STATIC_ASSERT( \
   ^
/usr/include/eigen3/Eigen/src/Core/Assign.h:492:3: note: in expansion of macro ‘EIGEN_STATIC_ASSERT_SAME_MATRIX_SIZE’
   EIGEN_STATIC_ASSERT_SAME_MATRIX_SIZE(Derived,OtherDerived)
   ^
make[2]: *** [CMakeFiles/tracking.dir/src/DepthFilter.cpp.o] Error 1
make[1]: *** [CMakeFiles/tracking.dir/all] Error 2
make: *** [all] Error 2
